[package]
name = "feldunor"
version = "0.1.0"
authors = ["Daniel"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shipyard = { git = "https://github.com/leudz/shipyard" }
bracket-lib = "0.8.1"
# delaunator = "0.2.0"
